syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "/pb";

package pb;

service Token {
    rpc SignUp(requestSignUp) returns (google.protobuf.Empty) {}
    rpc SignIn(requestSignIn) returns (responseSignIn) {}
    rpc Refresh(requestRefresh) returns (responseRefresh) {}
}

message requestSignUp {
    userData data = 1;
    string password = 2;
}

message requestSignIn {
    int64 userID = 1;
    string password = 2;
}

message responseSignIn {
    jwt tokens = 1;
}

message requestRefresh {
    refreshToken rft = 1;
} 

message responseRefresh {
    jwt tokens = 1;
}

// Custom message types:

message userData { // 1
    int64 id = 1;
    string name = 2;
    bool male = 3;
}

message passwordData {
    int64 userID = 1;
    string password = 2;
}

message jwt {
    string authToken = 1;
    refreshToken rft = 2;
}

message refreshToken {
    int64 userID = 1;
    string uuid = 2;
    string hash = 3;
    google.protobuf.Timestamp experation = 4; 
}